| Bug #17116 | myisam_ftdump doesn't work with fulltext indexes using a parser plugin | ||
|---|---|---|---|
| Submitted: | 4 Feb 2006 12:54 | Modified: | 28 Feb 2006 1:51 |
| Reporter: | Hartmut Holzgraefe | ||
| Status: | Closed | ||
| Category: | Server: MyISAM | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | |
| Assigned to: | Sergey Vojtovich | Target Version: | |
[4 Feb 2006 12:54]
Hartmut Holzgraefe
[8 Feb 2006 17:17]
Jorge del Conde
I got the same problem under FC4 using a recent clone of 5.1
[16 Feb 2006 12:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/2719
[21 Feb 2006 15:30]
Sergey Vojtovich
Fixed in 5.1.8
[28 Feb 2006 1:51]
Paul DuBois
Noted in 5.1.7 changelog. <command>myisam_ftdump</command> did not work for <literal>FULLTEXT</literal> indexes associated with a parser plugin. (Bug #17116)
