BUG#17116: myisam_ftdump doesn't work with fulltext indexes using a parser plugin Fixed that myisam_ftdump fails (error 138 that is HA_ERR_UNSUPPORTED) to open table with fulltext index with custom parser.

storage/myisam/myisam_ftdump.c:
  Allow myisam_ftdump to open table with fulltext index
  with custom parser. This is implemented by passing
  HA_OPEN_FROM_SQL_LAYER flag to mi_open().